@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-12-6
+DATE: 05/17/2018
+STAFF: sc
+CHANGES: TR12862 New Recombinase allele without driver gene report.
+
 TAG: qcreports_db-6-0-12-5
 DATE: 05/16/2018
 STAFF: lec 
